# Chess

./: .gitignore  CMakeLists.txt  cascade.py  directory_layout.txt  main.cpp  readme.md  rename_assets.py
.claude/: settings.local.json
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: chessboard.cpp  chessboard.h  config.cpp  config.h  constants.h  draw.cpp  draw.h  gameplay.cpp  gameplay.h  input_handler.cpp  input_handler.h  log.cpp  log.h  memory.cpp  mouse.cpp  mouse.h  renderer.cpp  renderer.h  sandbox.cpp  shader.cpp  shader.h  shaders.cpp  sound.h  texture.cpp  texture.h  viewer.cpp  viewer.h  window.cpp  window.h
src/audio/: sound.cpp
src/core/: benchmark.cpp  benchmark.h  config.cpp  config.h  log.cpp  memory.cpp  memory.h  sandbox.h
src/game/: game_state.h  gameplay.cpp  gameplay.h
src/game/gameplay/: gameplay_log.cpp  gameplay_log.h
src/game/logic/: capture.cpp  capture.h  logic.cpp  logic.h
src/game/pieces/: bishop.h  king.h  knight.h  pawn.h  piece.cpp  piece.h  queen.h  rook.h
src/graphics/: draw.cpp  draw.h  renderer.cpp  shaders.cpp  shaders.h  texture.cpp  texture.h  viewer.cpp
src/input/: input_handler.cpp  input_handler.h  mouse.cpp  mouse.h
